fixed tile alignment

--- a/style/style.scss
+++ b/style/style.scss
@@ -151,11 +151,12 @@ label {
   .tile-grid {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
 
     @include breakpoint(break) {
       flex-direction: row;
       justify-content: space-around;
+      align-items: flex-start;
       gap: 1rem;
       margin: 2%;
     }
